--- a/_config.yml
+++ b/_config.yml
@@ -33,9 +33,9 @@ collections:
     permalink: /projects/:title/
   posts:
     output: true
-  pages:
-    output: true
-    permalink: /:title/
+  #pages:
+    #output: true
+    #permalink: /:title/
 
 defaults:
   - scope:
@@ -49,12 +49,12 @@ defaults:
       share: false
       related: true
 
-  - scope:
-      path: ""
-      type: pages
-    values:
-      layout: single
-      author_profile: true
+  #- scope:
+      #path: ""
+      #type: pages
+    #values:
+      #layout: single
+      #author_profile: true
 
 plugins:
   - jekyll-feed
