Changed back collections for pages

--- a/_config.yml
+++ b/_config.yml
@@ -33,9 +33,9 @@ collections:
     permalink: /projects/:title/
   posts:
     output: true
-  #pages:
-    #output: true
-    #permalink: /:title/
+  pages:
+    output: true
+    permalink: /:title/
 
 defaults:
   - scope:
