--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,3 @@
-
 name: Build and Deploy Jekyll Site
 
 on:
@@ -18,18 +17,21 @@ jobs:
         uses: ruby/setup-ruby@v1
         with:
           ruby-version: 3.1
+          
 
       - name: Install Dependencies
         run: |
-          gem install bundler
-          bundle config path vendor/bundle
           bundle install
 
       - name: Build Site with Jekyll
         run: bundle exec jekyll build
+
+      - name: List _site contents
+        run: ls -R ./_site
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./_site
+          force_orphan: true
