--- a/_data/my_manual_projects.yml
+++ b/_data/my_manual_projects.yml
@@ -1,19 +1,25 @@
 - title: "Quiz Game CLI"
-  excerpt: "A command-line quiz game built with Python, demonstrating fundamental programming concepts."
+  description: "A command-line quiz game built with Python, demonstrating fundamental programming concepts."
+  image: "/assets/images/quiz-game-teaser.png" # Path to your teaser image
   url: "/projects/quiz-game-cli/" # This links to the page generated from _projects/quiz-game-cli.md
-  teaser: "/assets/images/teasers/quiz-game-teaser.png" # Path to your teaser image
-  tags: ["Python", "CLI"]
+  published: published
 
 - title: "Arithmetic Formatter"
-  excerpt: "A Python function to neatly format arithmetic problems as specified in a coding challenge."
+  description: "A Python function to neatly format arithmetic problems as specified in a coding challenge."
+  image: "/assets/images/arithmetic-formatter.png"
   url: "/projects/arithmetic-formatter/"
-  teaser: "/assets/images/teasers/arithmetic-formatter-teaser.png"
-  tags: ["Python", "Algorithm"]
+  published: published
 
 - title: "Python Core Notebooks"
-  excerpt: "A collection of Jupyter notebooks exploring core Python concepts and libraries."
-  url: "/projects/python-core-notebooks/" # Link to the page from _projects/python-core-notebooks.md
-  teaser: "/assets/images/teasers/python-notebooks-teaser.png"
-  tags: ["Python", "Jupyter", "Data Science Basics"]
+  description: "A collection of Jupyter notebooks exploring core Python concepts and libraries."
+  url: "/projects/python-notebooks/" # Link to the page from _projects/python-core-notebooks.md
+  image: "/assets/images/python-notebooks.png"
+  published: published
+  
+- title: Placeholder Project
+  description: More projects coming soon!
+  image: /assets/images/placeholder.png
+  url: "#"
+  status: upcoming
 
 # Add more projects here as you complete them
