--- a/.gitattributes
+++ b/.gitattributes
@@ -7,4 +7,8 @@ _sass/minimal-mistakes/vendor/* linguist-vendored
 CHANGELOG.md                    text merge=union
 docs/_docs/18-history.md        text merge=union
 
-*.md                            text
+* text=auto eol=lf
+*.md  text eol=lf
+*.html text eol=lf
+*.css text eol=lf
+*.js  text eol=lf
