--- a/_data/projects_ai.yml
+++ b/_data/projects_ai.yml
@@ -1,4 +1,4 @@
-- title: Placeholder Project
+- title: Projects Upcoming!
   description: More projects coming soon!
   image: /assets/images/placeholder.png
   url: "#"
