--- a/_data/projects_ai.yml
+++ b/_data/projects_ai.yml
@@ -1,6 +1,6 @@
 - title: Projects Upcoming!
   description: More projects coming soon!
-  image: /assets/images/placeholder.png
+  image: /assets/images/placeholder.jpg
   url: "#"
   status: upcoming
 
